--- a/php.ini
+++ b/php.ini
@@ -21,101 +21,68 @@
 ; Error Handling and Logging ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Set error reporting level to show all errors during development
 error_reporting = E_ALL
-
-; Display errors is enabled during development; set to Off in production
 display_errors = On
-
-; Log errors to a file for production (helps with debugging in production environments)
 log_errors = On
 
-; Define where errors are logged
-error_log = "/var/log/php_errors.log"
+; Set a valid log path on Windows, adjust as needed
+error_log = "D:/vs code/hanqiao/php_errors.log"
 
-; Display startup errors (turn off in production)
 display_startup_errors = On
 
 ;;;;;;;;;;;;;;;;;;;
 ; File Upload Settings ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Allow file uploads (enabled)
 file_uploads = On
 
-; Define upload directory (ensure it has write permissions)
-upload_tmp_dir = "/path/to/temp/uploads"
+; Use Windows temp directory or create your own temp folder
+upload_tmp_dir = "D:/vs code/hanqiao/tmp"
 
-; Maximum allowed size for uploaded files
 upload_max_filesize = 10M
-
-; Maximum size for POST data
 post_max_size = 12M
-
-; Maximum number of files allowed to be uploaded in one request
 max_file_uploads = 20
 
 ;;;;;;;;;;;;;;;;;;;
 ; Session Settings ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Session save handler (files are default)
 session.save_handler = files
 
-; Path to save session data (make sure directory exists and is writable)
-session.save_path = "/path/to/sessions"
+; IMPORTANT: create this directory if it doesn't exist, and ensure PHP can write to it
+session.save_path = "D:/vs code/hanqiao/sessions"
 
-; Use strict session mode to avoid session fixation attacks
 session.use_strict_mode = 1
-
-; Use cookies for session management
 session.use_cookies = 1
-
-; Only use cookies for session management
 session.use_only_cookies = 1
-
-; Set session cookie lifetime (0 = until browser is closed)
 session.cookie_lifetime = 0
-
-; Name for the session cookie
 session.name = PHPSESSID
-
-; Automatic garbage collection
 session.gc_probability = 1
 session.gc_divisor = 1000
-session.gc_maxlifetime = 1440  ; Session data expires after 24 minutes
+session.gc_maxlifetime = 1440
 
 ;;;;;;;;;;;;;;;;;;;
 ; Timezone and Locale ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Set default timezone (important to avoid warnings)
 date.timezone = "America/New_York"
 
 ;;;;;;;;;;;;;;;;;;;
 ; Security Settings ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Disable dangerous functions (for security reasons)
 disable_functions = exec,shell_exec,system,passthru
-
-; Prevent URL fopen for remote files (disable if not needed)
 allow_url_fopen = Off
-
-; Prevent inclusion of remote files (like for require or include)
 allow_url_include = Off
 
-; Enable safe mode for file system operations (recommended for production)
-open_basedir = "/path/to/webroot"
+; Restrict PHP file access to your project folder only
+open_basedir = "D:/vs code/hanqiao"
 
 ;;;;;;;;;;;;;;;;;;;
 ; Performance and Caching ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Enable output buffering (for improved performance)
 output_buffering = 4096
-
-; Enable OPcache for better performance in production (compiles PHP scripts)
 opcache.enable = 1
 opcache.memory_consumption = 128
 opcache.interned_strings_buffer = 8
@@ -127,75 +94,49 @@ opcache.revalidate_freq = 2
 ; MySQL and PDO Settings ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Enable PDO extensions for database connections
 extension=pdo_mysql
 extension=mysqli
 
-; Default socket name for local MySQL connections
-pdo_mysql.default_socket = "/path/to/mysql.sock"
+; For Windows usually no need to set socket, comment it out
+; pdo_mysql.default_socket = "/path/to/mysql.sock"
 
 ;;;;;;;;;;;;;;;;;;;
 ; Miscellaneous ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Disable exposing PHP information in headers (improves security)
 expose_php = Off
 
 ;;;;;;;;;;;;;;;;;;;
 ; Resource Limits ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Maximum execution time of each script (30 seconds is a good default)
 max_execution_time = 30
-
-; Maximum input time for POST data parsing (60 seconds is recommended)
 max_input_time = 60
-
-; Memory limit (128MB is common, increase if your app requires more memory)
 memory_limit = 128M
 
 ;;;;;;;;;;;;;;;;;;;
 ; Path and Directories ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Directory for PHP extensions (ensure the correct path)
 extension_dir = "ext"
-
-; Uncomment and set the correct path for temporary files
-;sys_temp_dir = "/path/to/temp"
 
 ;;;;;;;;;;;;;;;;;;;
 ; Dynamic Extensions ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Enable required PHP extensions
-extension=pdo_mysql
-extension=mysqli
+; Commented out duplicate extensions to avoid warnings
+; extension=pdo_mysql
+; extension=mysqli
 
-; Other extensions can be enabled based on need, such as:
+; Uncomment based on your needs
 ; extension=curl
 ; extension=gd
 ; extension=mbstring
 ; extension=zip
 
 ;;;;;;;;;;;;;;;;;;;
-; Session Settings ;
-;;;;;;;;;;;;;;;;;;;
-
-; Uncomment and set the path to save session data
-;session.save_path = "/path/to/sessions"
-
-; Session garbage collection (set to a high value for performance in production)
-session.gc_probability = 1
-session.gc_divisor = 1000
-
-;;;;;;;;;;;;;;;;;;;
 ; Optional Settings ;
 ;;;;;;;;;;;;;;;;;;;
 
-; Set default character set for your application
 default_charset = "UTF-8"
-
-; Set default MIME type
 default_mimetype = "text/html"
-
